fix overflowing text on post

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -45,6 +45,7 @@
 
 .tweet > div > p {
   margin: 0px 12px;
+  word-break: break-all;
 }
 
 .tweet > footer {
